public/css/large.css
/* 888  888  .d8888b   
// 'Y8bd8P'  88K       
//   X88K    "Y8888b.  
// .d8""8b.       X88  
// 888  888   88888P'  
*/
@media (min-width: 370px) {
    nav {
        flex-direction: row;
    }
}

/* .d8888b   88888b.d88b.   
// 88K       888 "888 "88b  
// "Y8888b.  888  888  888  
//      X88  888  888  888  
//  88888P'  888  888  888  
*/
@media (min-width: 640px) {
    #wrapper {
        overflow: hidden;

        width: 90vw;
        margin-left: auto;
        margin-right: auto;
        margin-top: 1rem;
        margin-bottom: 1rem;

        border: 10px solid var(--higlight-color);
        border-radius: 10px;
    }

    #top-header {
        flex-direction: row;
    }

    nav a {
        padding: 1rem;
    }

    .home-hero .vehicle-info {
        grid-column: 1/2;
    }
}

/*                     888  
//                     888  
//                     888  
// 88888b.d88b.    .d88888  
// 888 "888 "88b  d88" 888  
// 888  888  888  888  888  
// 888  888  888  Y88b 888  
// 888  888  888   "Y88888  
*/
@media (min-width: 768px) {
    .home-content {
        flex-direction: row;
    }

    .home-hero .vehicle-info {
        margin-left: 2rem;
    }

    .vehicle-details-container{
        flex-direction: row;
    }
}

